--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,9 +9,9 @@
             "remotePath": "",
             "port": 2345,
             "host": "127.0.0.1",
-            "program": "${fileDirname}",
+            "program": "${workspaceFolder}",
             "env": {},
-            "args": ["/home/sb/music/Misc/Roland Corp. - Sailing (1992).mid.flac", "sailing.wav"],
+            "args": ["01-drumloop.wav"],
             "showLog": true
         }
     ]
