--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "target": "es6",
         "strict": true,
         "noEmitOnError": true,
         "noFallthroughCasesInSwitch": true,
