add build-debug npm script that targets ES2017

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "build-debug": "tsc --target ES2017"
   }
 }
