add config files for developing in a Docker container through VS Code

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,17 +2,12 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "wav",
+            "name": "debug",
             "type": "go",
             "request": "launch",
             "mode": "debug",
-            "remotePath": "",
-            "port": 2345,
-            "host": "127.0.0.1",
-            "program": "${workspaceFolder}",
-            "env": {},
-            "args": ["01-drumloop.wav"],
-            "showLog": true
+            "program": "${workspaceFolder}/cmd/aurelius",
+            "args": ["-db", "db"],
         }
     ]
 }
