set up automated JS testing with mocha/node
Also use rollup for bundling. The main reason for this is to work around
missing .js extensions in import statments output from tsc, which are
currently needed by browsers. Adding .js extensions inside the TypeScript
source works for tsc, but breaks ts-node, used by mocha. So, we just
bundle instead of using tsc's output directly.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,14 @@
         "noImplicitReturns": true,
         "noImplicitThis": true,
         "noUnusedLocals": true,
+        "rootDir": "ts",
         "outDir": "cmd/aurelius/static/js"
     },
     "include": [
         "ts/**/*.ts"
+    ],
+    "exclude": [
+        "ts/**/*.spec.ts",
+        "ts/test-setup.ts"
     ]
 }
