--- a/package.json
+++ b/package.json
@@ -1,10 +1,30 @@
 {
   "dependencies": {
+    "@rollup/plugin-typescript": "^4.1.0",
+    "rollup": "^2.6.0",
+    "rollup-plugin-terser": "^5.3.0",
+    "tslib": "^1.11.1",
     "typescript": "3.7.x"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.11.1",
+    "mocha": "^7.1.1",
+    "ts-node": "^8.8.2",
+    "xmlhttprequest": "^1.8.0"
+  },
   "scripts": {
-    "build": "tsc",
-    "build-debug": "tsc --target ES2017"
+    "build": "rollup --config",
+    "build-debug": "rollup --config --configDebug",
+    "test": "mocha"
+  },
+  "mocha": {
+    "extension": [
+      "ts"
+    ],
+    "spec": "ts/**/*.spec.ts",
+    "require": [
+      "ts-node/register"
+    ]
   }
 }
