--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.1",
     "mocha": "^7.1.1",
+    "nyc": "^15.0.1",
     "ts-node": "^8.8.2",
     "xmlhttprequest": "^1.8.0"
   },
   "scripts": {
     "build": "rollup --config",
     "build-debug": "rollup --config --configDebug",
-    "test": "mocha"
+    "test": "mocha",
+    "coverage": "nyc --reporter=lcov --reporter=text mocha"
   },
   "mocha": {
     "extension": [
