--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "typescript": "3.7.x"
   },
   "devDependencies": {
+    "@types/jsdom": "^16.2.1",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.1",
+    "jsdom": "^16.2.2",
     "mocha": "^7.1.1",
     "nyc": "^15.0.1",
-    "ts-node": "^8.8.2",
-    "xmlhttprequest": "^1.8.0"
+    "ts-node": "^8.8.2"
   },
   "scripts": {
     "build": "rollup --config",
