forward port 9091 to dev container for godoc

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,7 +18,10 @@
 	"extensions": ["ms-vscode.go"],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	"forwardPorts": [9090],
+	"forwardPorts": [
+		9090, // aurelius
+		9091  // godoc
+	],
 
 	// Uncomment the next line to run commands after the container is created - for example installing git.
 	// "postCreateCommand": "apt-get update && apt-get install -y git",
