--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,10 @@
             "request": "launch",
             "mode": "debug",
             "program": "${workspaceFolder}/cmd/aurelius",
-            "args": ["-media", "${workspaceFolder}/test/media"],
+            "args": [
+                "-media", "${workspaceFolder}/test/media",
+                "-storage", "${workspaceFolder}/test/storage",
+            ],
         },
         {
             "name": "debug (passphrase)",
@@ -15,7 +18,11 @@
             "request": "launch",
             "mode": "debug",
             "program": "${workspaceFolder}/cmd/aurelius",
-            "args": ["-media", "${workspaceFolder}/test/media", "-pass", "blah"],
+            "args": [
+                "-media", "${workspaceFolder}/test/media",
+                "-storage", "${workspaceFolder}/test/storage",
+                "-pass", "blah",
+            ],
         }
     ]
 }
