--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "dependencies": {
     "@rollup/plugin-typescript": "^4.1.0",
     "rollup": "^2.6.0",
-    "rollup-plugin-terser": "^5.3.0",
-    "tslib": "^1.11.1",
-    "typescript": "3.7.x"
+    "rollup-plugin-terser": "^7.0.2",
+    "tslib": "^2.1.0",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
     "@types/jsdom": "^16.2.1",
@@ -13,7 +13,7 @@
     "jsdom": "^16.2.2",
     "mocha": "^7.1.1",
     "nyc": "^15.0.1",
-    "ts-node": "^8.8.2"
+    "ts-node": "^9.1.1"
   },
   "scripts": {
     "build": "rollup --config",
