--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/jsdom": "^16.2.1",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.1",
+    "@types/wicg-mediasession": "^1.1.0",
     "jsdom": "^16.2.2",
     "mocha": "^7.1.1",
     "nyc": "^15.0.1",
