--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "dependencies": {
-    "@rollup/plugin-typescript": "^4.1.0",
-    "@types/wicg-mediasession": "^1.1.0",
-    "rollup": "^3.29.5",
-    "rollup-plugin-terser": "^7.0.2",
-    "tslib": "^2.1.0",
-    "typescript": "^4.1.3"
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.1.2",
+    "@types/node": "^22.13.10",
+    "@types/jsdom": "^21.1.7",
+    "@types/mocha": "^10.0.10",
+    "@types/wicg-mediasession": "^1.1.8",
+    "rollup": "^4.35.0",
+    "tslib": "^2.8.1",
+    "typescript": "^5.8.2"
   },
   "devDependencies": {
-    "@types/jsdom": "^16.2.14",
-    "@types/mocha": "^9.1.0",
-    "@types/node": "^13.11.1",
-    "jsdom": "^16.7.0",
-    "mocha": "^9.2.2",
-    "nyc": "^15.1.0",
-    "ts-node": "^9.1.1"
+    "jsdom": "^26.0.0",
+    "mocha": "^11.1.0",
+    "nyc": "^17.1.0",
+    "ts-node": "^10.9.2"
   },
   "scripts": {
     "build": "rollup --config",
