--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,9 @@
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
 
+.DS_Store
+
 /node_modules
 /.nyc_output
 /coverage
-.DS_Store
+.claude/settings.local.json
