Log all FFMPEG logs except FATAL and PANIC at the Debug level.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -22,3 +22,5 @@ linters-settings:
     disabled-checks:
       - dupSubExpr
       - ifElseChain
+  exhaustive:
+    default-signifies-exhaustive: true
