--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "dependencies": {
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.2",
-    "@types/node": "^22.13.10",
     "@types/jsdom": "^21.1.7",
     "@types/mocha": "^10.0.10",
+    "@types/node": "^22.13.10",
     "@types/wicg-mediasession": "^1.1.8",
     "rollup": "^4.35.0",
     "tslib": "^2.8.1",
@@ -13,13 +13,14 @@
   "devDependencies": {
     "jsdom": "^26.0.0",
     "mocha": "^11.1.0",
+    "mocha-suppress-logs": "^0.6.0",
     "nyc": "^17.1.0",
     "ts-node": "^10.9.2"
   },
   "scripts": {
     "build": "rollup --config",
     "build-debug": "rollup --config --configDebug",
-    "test": "mocha",
+    "test": "mocha --require mocha-suppress-logs",
     "coverage": "nyc --reporter=lcov --reporter=text mocha"
   },
   "mocha": {
